update fill button on over but still need z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -462,19 +462,57 @@ footer section:first-of-type .container > a{
     flex-basis: 20%;
     text-align: center;
     padding: 15px 0;
-    outline: 2px solid #e9204f;
-    border: 2px solid #000;
+    outline: 1px solid #e9204f;
+    border: 1px solid #000;
     font-size: 20px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
 }
 
-footer section:first-of-type .container > a:hover{
+footer section:first-of-type .container > a::before{
+    position: absolute;
+    content: '';
+    height: 100%;
     background-color: #e9204f;
-    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    /*width: 100%;
     -webkit-transition: all 1s ease-in-out 0s;
     transition: all 5s ease-in-out 0s;
-    
+    animation: fillIn 5s linear forwards;*/
+    animation: fillOut .2s linear forwards;
+}
+
+footer section:first-of-type .container > a:hover::before{
+    position: absolute;
+    /*width: 100%;
+    -webkit-transition: all 1s ease-in-out 0s;
+    transition: all 5s ease-in-out 0s;*/
+    animation: fillIn .2s linear forwards;
+}
+
+@keyframes fillIn{
+    from{
+        width: 0;
+        background-color: #e9204f;
+    }
+    to{
+        width: 100%;
+        background-color: #e9204f;
+    }
+}
+
+@keyframes fillOut{
+    from{
+        width: 100%;
+        background-color: #e9204f;
+    }
+    to{
+        width: 0;
+        background-color: #e9204f;
+    }
 }
 
 footer section:first-of-type .container ul{
